filetypeadvisor.com (archived on 2017-07-30)
{
  "alexa_rank": 81437,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 2570,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.3,
  "homepage_snapshot_redirected_domain": "filetypeadvisor.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171004112119id_/https://www.filetypeadvisor.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171004112119id_/http%3A//filetypeadvisor.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "filetypeadvisor.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170730223153id_/https%3A//www.filetypeadvisor.com/privacy-policy.htm",
  "policy_title": "Privacy Policy",
  "policy_url": "filetypeadvisor.com/privacy-policy.htm",
  "sha1": "80301f27c77dc13669e72ba48186278bbcd4dcf1",
  "simhash": 8114295511162114109,
  "simhash_updated": false,
  "site_hostname": "filetypeadvisor.com",
  "site_url": "http://filetypeadvisor.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170730223153",
  "word_count": 398,
  "year": 2017
}

--- a/f/fi/fil/filetypeadvisor.com.html
+++ b/f/fi/fil/filetypeadvisor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the filetypeadvisor.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606003745id_/http%3A//www.filetypeadvisor.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the filetypeadvisor.com privacy policy that was archived on 2017-07-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170730223153id_/https%3A//www.filetypeadvisor.com/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>Privacy Policy</title>
@@ -17,7 +17,7 @@
     <link href="https://plus.google.com/114738304302565087022" rel="publisher">
 
 
-<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -28,29 +28,8 @@
 
 </script>
 
-<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9279897696813054",
-    enable_page_level_ads: true
-  });
-</script>
-<script src="//load.sumome.com/" data-sumo-site-id="5cb6b851ccaabf57c4e392a88b2caebdd06ece3fd0a54e838759f3f92324cd6b" async="async"></script>
 </head>
 <body>
-<script type="text/javascript">
-window.google_analytics_uacct = "UA-139140-20";
-</script>
-<div id="fb-root"></div>
-<script>setTimeout(function(){
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=105283129581231";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-}, 5000);</script>
     <div class="header">
         <div class="layout">
             <a href="/" class="logo">Your guide in file formats</a>
@@ -69,11 +48,6 @@ window.google_analytics_uacct = "UA-139140-20";
                         </ul>
                     </div>
                 </div>                
-                <div class="soc">
-                    <a href="http://twitter.com/filetypeadvisor" style="float: left; margin-right:5px;"><img src="/resources/images/twitter-follow-btn.png" alt="Follow us on Twitter" title="Follow us on Twitter"></a>
-                    <div style="width: 75px; overflow: hidden; float: left;"><div class="g-plusone" data-size="medium" data-href="http://www.filetypeadvisor.com"></div></div>
-					<div class="fb-like" style="vertical-align: top; overflow: visible;" data-href="http://www.facebook.com/FileTypeAdvisor" data-width="100" data-layout="button_count" data-show-faces="false" data-send="false"></div>
-                </div>
             </div>
             <div class="search">
                 <form action="/extension">
@@ -87,13 +61,6 @@ window.google_analytics_uacct = "UA-139140-20";
             <div class="clear"></div>
         </div>
     </div>
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
     <div class="body">
         <div class="layout">
             <div class="left_menu">
@@ -101,12 +68,12 @@ window.google_analytics_uacct = "UA-139140-20";
                 <div class="popular">
 
 <ul>
-<li class="gray"><a href="/extension/wsxz"><img src="/format-icons/wsxz.png" width="32" height="32" alt="WSXZ">WSXZ</a></li>
-<li><a href="/extension/axp"><img src="/format-icons/axp.png" width="32" height="32" alt="AXP">AXP</a></li>
-<li class="gray"><a href="/extension/psc"><img src="/icons/blank.png" width="32" height="32" alt="PSC">PSC</a></li>
-<li><a href="/extension/tsv"><img src="/format-icons/tsv.png" width="32" height="32" alt="TSV">TSV</a></li>
-<li class="gray"><a href="/extension/pk"><img src="/format-icons/pk.png" width="32" height="32" alt="PK">PK</a></li>
-<li><a href="/extension/ogg"><img src="/format-icons/ogg.png" width="32" height="32" alt="OGG">OGG</a></li>
+<li class="gray"><a href="/extension/csi"><img src="/format-icons/csi.png" width="32" height="32" alt="CSI">CSI</a></li>
+<li><a href="/extension/avc"><img src="/format-icons/avc.png" width="32" height="32" alt="AVC">AVC</a></li>
+<li class="gray"><a href="/extension/cps"><img src="/format-icons/cps.png" width="32" height="32" alt="CPS">CPS</a></li>
+<li><a href="/extension/wpd"><img src="/format-icons/wpd.png" width="32" height="32" alt="WPD">WPD</a></li>
+<li class="gray"><a href="/extension/1sc"><img src="/format-icons/1sc.png" width="32" height="32" alt="1SC">1SC</a></li>
+<li><a href="/extension/ovg"><img src="/icons/blank.png" width="32" height="32" alt="OVG">OVG</a></li>
 </ul>
 
                 </div>
@@ -129,11 +96,12 @@ window.google_analytics_uacct = "UA-139140-20";
                 </div>                
                 <div class="banner1">
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- fa-top -->
-<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-9279897696813054" data-ad-slot="7688311941"></ins>
+<!-- fa-top2 -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9279897696813054" data-ad-slot="3953582685" data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
                 </div>
                 <div class="main_text">
 
@@ -214,9 +182,6 @@ revision of our Privacy Policy.</p>
         </div>
     </div> 
 	
-	<script src="/resources/js/jquery.js" type="text/javascript"></script>
-	<script src="/resources/js/jquery.textPlaceholder.js" type="text/javascript"></script>
-	<script src="/resources/js/x.js" type="text/javascript"></script>
 
 
 </body></html>
