--- a/u/us/usa/usabilla.com.html
+++ b/u/us/usa/usabilla.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the usabilla.com privacy policy that was archived on 2017-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170628003842id_/https%3A//usabilla.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the usabilla.com privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731005411id_/https%3A//usabilla.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
     <base href="/">
@@ -32,10 +32,10 @@
 <link rel="author" href="https://plus.google.com/103970564098919657731">
 <link rel="icon" type="image/png" href="img/icon.png">
 
-<link rel="stylesheet" href="css/style-5f3449f416.css">
+<link rel="stylesheet" href="css/style-0fbbcb853f.css">
 
 <meta name="google-site-verification" content="CpTGKmXfuCKLbAiol1_7NU32azLPegdlLIUIk6_zwsQ">
-<script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-56BR9R"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="js/min/jquery.min.js"></script>
+
 
 
 
@@ -55,7 +55,7 @@
 
 </head>
 
-<body data-id="home-about"><div id="cookie-bar" class="fixed bottom" style="z-index:99999999;"><p>We use <a href="https://web.archive.org/web/20170712171204/https://usabilla.com/cookie-policy">cookies</a> to track usage and improve the website. <a href="" class="cb-enable">×</a></p></div><div id="lightningjs-usabilla_live" style="display: none;"><div><iframe frameborder="0" id="lightningjs-frame-usabilla_live"></iframe></div></div><div id="usabilla" style="display: none;"><iframe id="usabilla-e42049cc2be9"></iframe></div>
+<body data-id="home-about"><div id="cookie-bar" class="fixed bottom" style="z-index:99999999;"><p>We use <a href="https://web.archive.org/web/20170808001319/https://usabilla.com/cookie-policy">cookies</a> to track usage and improve the website. <a href="" class="cb-enable">×</a></p></div><div id="lightningjs-usabilla_live" style="display: none;"><div><iframe frameborder="0" id="lightningjs-frame-usabilla_live"></iframe></div></div><div id="usabilla" style="display: none;"><iframe id="usabilla-e42049cc2be9"></iframe></div>
 
 <div class="grid">
     <div class="navigation-padding"></div>
@@ -90,7 +90,7 @@
                 </li>
                 <li class="in-page">
                     <a href="products/in-page/">
-                        Usabilla in Page
+                        Usabilla In-Page
                     </a>
                 </li>
             </ul>
@@ -193,9 +193,9 @@
                 <li>
                     <a href="/fr/" class="fr-language">French</a>
                 </li>
-                <!--<li>
+                <li>
                     <a href="/de/" class="de-language">German</a>
-                </li>-->
+                </li>
                 <li>
                     <a href="/sv/" class="se-language">Swedish</a>
                 </li>
@@ -228,7 +228,7 @@
 
 		<div class="push--bottom">
 			<h6 class="push--bottom-small"> </h6>
-			Our websites also use cookies. In some cases, the use of cookies is considered equivalent to the processing of personal data. Personal data collected by the cookies on our website is only used for analytical purposes. For more information about our use of cookies, please refer to our <a href="https://www.usabilla.com/cookie-policy">Cookie Policy</a>.
+			Our websites also use cookies. In some cases, the use of cookies is considered equivalent to the processing of personal data. Personal data collected by the cookies on our website is only used for analytical purposes. For more information about our use of cookies, please refer to our <a href="https://usabilla.com/cookie-policy/">Cookie Policy</a>.
 		</div>
 
 		<div class="push--bottom">
@@ -277,9 +277,9 @@
                             <li>
                                 <a href="/fr/" class="fr-language">French</a>
                             </li>
-                           <!-- <li>
+                           <li>
                                 <a href="/de/" class="de-language">German</a>
-                            </li>-->
+                            </li>
                             <li>
                                 <a href="/sv/" class="se-language">Swedish</a>
                             </li>
@@ -298,9 +298,9 @@
                             <li>
                                 <a href="/fr/" class="fr-language">French</a>
                             </li>
-                           <!-- <li>
+                           <li>
                                 <a href="/de/" class="de-language">German</a>
-                            </li>-->
+                            </li>
                             <li>
                                 <a href="/sv/" class="se-language">Swedish</a>
                             </li>
@@ -453,30 +453,31 @@
 </div>
 
 <!-- custom scripts  -->
-<script src="js/min/scripts-rev/scripts-788cf207a5.js"></script>
-<script src="js/js-cookie.js"></script>
+<script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-56BR9R"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="js/min/jquery.min.js" defer=""></script>
+<script src="js/min/scripts-rev/scripts-3139778d29.js" defer=""></script>
+<script src="js/js-cookie.js" defer=""></script>
 
 <!-- begin usabilla embed code -->
-<script>/*{literal}<![CDATA[*/window.usabilla||function(){var a=window,d=a.document,c={},f=d.createElement("div"),h=!1,a=a.usabilla=function(){(c.a=c.a||[]).push(arguments)};a._=c;c.ids={};f.style.display="none";(function(){if(!d.body)return setTimeout(arguments.callee,100);d.body.insertBefore(f,d.body.firstChild).id="usabilla";h=!0})();a.load=function(a,g,k){if(!c.ids[g]){var e=c.ids={};e.url="//"+a+"/"+g+".js?s1";e.config=k;setTimeout(function(){if(!h)return setTimeout(arguments.callee,100);var b=d.createElement("iframe"),a;b.id="usabilla-"+g;/MSIE[ ]+6/.test(navigator.userAgent)&&(b.src="javascript:false");f.appendChild(b);try{b.contentWindow.document.open()}catch(c){e.domain=d.domain,a="javascript:var d=document.open();d.domain='"+e.domain+"';",b.src=a+"void(0);"}try{var l=b.contentWindow.document;l.write(["<!DOCTYPE html><html><head></head><body onload=\"var d = document;d.getElementsByTagName('head')[0].appendChild(d.createElement('script')).src='",e.url,"'\"></body></html>"].join(""));l.close()}catch(m){b.src=a+'d.write("'+loaderHtml().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}b.contentWindow.config=k},0)}}}();
+<script defer="">/*{literal}<![CDATA[*/window.usabilla||function(){var a=window,d=a.document,c={},f=d.createElement("div"),h=!1,a=a.usabilla=function(){(c.a=c.a||[]).push(arguments)};a._=c;c.ids={};f.style.display="none";(function(){if(!d.body)return setTimeout(arguments.callee,100);d.body.insertBefore(f,d.body.firstChild).id="usabilla";h=!0})();a.load=function(a,g,k){if(!c.ids[g]){var e=c.ids={};e.url="//"+a+"/"+g+".js?s1";e.config=k;setTimeout(function(){if(!h)return setTimeout(arguments.callee,100);var b=d.createElement("iframe"),a;b.id="usabilla-"+g;/MSIE[ ]+6/.test(navigator.userAgent)&&(b.src="javascript:false");f.appendChild(b);try{b.contentWindow.document.open()}catch(c){e.domain=d.domain,a="javascript:var d=document.open();d.domain='"+e.domain+"';",b.src=a+"void(0);"}try{var l=b.contentWindow.document;l.write(["<!DOCTYPE html><html><head></head><body onload=\"var d = document;d.getElementsByTagName('head')[0].appendChild(d.createElement('script')).src='",e.url,"'\"></body></html>"].join(""));l.close()}catch(m){b.src=a+'d.write("'+loaderHtml().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}b.contentWindow.config=k},0)}}}();
 window.usabilla.load("w.usabilla.com", "e42049cc2be9");
 /*]]>{/literal}*/</script>
 <!-- end usabilla embed code -->
 
 
 <!-- begin usabilla live embed code -->
-<script type="text/javascript">/*{literal}<![CDATA[*/window.lightningjs||function(c){function g(b,d){d&&(d+=(/\?/.test(d)?"&":"?")+"lv=1");c[b]||function(){var i=window,h=document,j=b,g=h.location.protocol,l="load",k=0;(function(){function b(){a.P(l);a.w=1;c[j]("_load")}c[j]=function(){function m(){m.id=e;return c[j].apply(m,arguments)}var b,e=++k;b=this&&this!=i?this.id||0:0;(a.s=a.s||[]).push([e,b,arguments]);m.then=function(b,c,h){var d=a.fh[e]=a.fh[e]||[],j=a.eh[e]=a.eh[e]||[],f=a.ph[e]=a.ph[e]||[];b&&d.push(b);c&&j.push(c);h&&f.push(h);return m};return m};var a=c[j]._={};a.fh={};a.eh={};a.ph={};a.l=d?d.replace(/^\/\//,(g=="https:"?g:"http:")+"//"):d;a.p={0:+new Date};a.P=function(b){a.p[b]=new Date-a.p[0]};a.w&&b();i.addEventListener?i.addEventListener(l,b,!1):i.attachEvent("on"+l,b);var q=function(){function b(){return["<head></head><",c,' onload="var d=',n,";d.getElementsByTagName('head')[0].",d,"(d.",g,"('script')).",i,"='",a.l,"'\"></",c,">"].join("")}var c="body",e=h[c];if(!e)return setTimeout(q,100);a.P(1);var d="appendChild",g="createElement",i="src",k=h[g]("div"),l=k[d](h[g]("div")),f=h[g]("iframe"),n="document",p;k.style.display="none";e.insertBefore(k,e.firstChild).id=o+"-"+j;f.frameBorder="0";f.id=o+"-frame-"+j;/MSIE[ ]+6/.test(navigator.userAgent)&&(f[i]="javascript:false");f.allowTransparency="true";l[d](f);try{f.contentWindow[n].open()}catch(s){a.domain=h.domain,p="javascript:var d="+n+".open();d.domain='"+h.domain+"';",f[i]=p+"void(0);"}try{var r=f.contentWindow[n];r.write(b());r.close()}catch(t){f[i]=p+'d.write("'+b().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};a.l&&setTimeout(q,0)})()}();c[b].lv="1";return c[b]}var o="lightningjs",k=window[o]=g(o);k.require=g;k.modules=c}({}); if(!navigator.userAgent.match(/Android|BlackBerry|BB10|iPhone|iPad|iPod|Opera Mini|IEMobile/i)) {window.usabilla_live = lightningjs.require("usabilla_live", "\x2F\x2Fw.usabilla.com\x2F65faae774973.js"); } else {window.usabilla_live = lightningjs.require("usabilla_live", "\x2F\x2Fw.usabilla.com\x2Fefaf92c66c0c.js"); }/*]]>{/literal}*/</script>
+<script type="text/javascript" defer="">/*{literal}<![CDATA[*/window.lightningjs||function(c){function g(b,d){d&&(d+=(/\?/.test(d)?"&":"?")+"lv=1");c[b]||function(){var i=window,h=document,j=b,g=h.location.protocol,l="load",k=0;(function(){function b(){a.P(l);a.w=1;c[j]("_load")}c[j]=function(){function m(){m.id=e;return c[j].apply(m,arguments)}var b,e=++k;b=this&&this!=i?this.id||0:0;(a.s=a.s||[]).push([e,b,arguments]);m.then=function(b,c,h){var d=a.fh[e]=a.fh[e]||[],j=a.eh[e]=a.eh[e]||[],f=a.ph[e]=a.ph[e]||[];b&&d.push(b);c&&j.push(c);h&&f.push(h);return m};return m};var a=c[j]._={};a.fh={};a.eh={};a.ph={};a.l=d?d.replace(/^\/\//,(g=="https:"?g:"http:")+"//"):d;a.p={0:+new Date};a.P=function(b){a.p[b]=new Date-a.p[0]};a.w&&b();i.addEventListener?i.addEventListener(l,b,!1):i.attachEvent("on"+l,b);var q=function(){function b(){return["<head></head><",c,' onload="var d=',n,";d.getElementsByTagName('head')[0].",d,"(d.",g,"('script')).",i,"='",a.l,"'\"></",c,">"].join("")}var c="body",e=h[c];if(!e)return setTimeout(q,100);a.P(1);var d="appendChild",g="createElement",i="src",k=h[g]("div"),l=k[d](h[g]("div")),f=h[g]("iframe"),n="document",p;k.style.display="none";e.insertBefore(k,e.firstChild).id=o+"-"+j;f.frameBorder="0";f.id=o+"-frame-"+j;/MSIE[ ]+6/.test(navigator.userAgent)&&(f[i]="javascript:false");f.allowTransparency="true";l[d](f);try{f.contentWindow[n].open()}catch(s){a.domain=h.domain,p="javascript:var d="+n+".open();d.domain='"+h.domain+"';",f[i]=p+"void(0);"}try{var r=f.contentWindow[n];r.write(b());r.close()}catch(t){f[i]=p+'d.write("'+b().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};a.l&&setTimeout(q,0)})()}();c[b].lv="1";return c[b]}var o="lightningjs",k=window[o]=g(o);k.require=g;k.modules=c}({}); if(!navigator.userAgent.match(/Android|BlackBerry|BB10|iPhone|iPad|iPod|Opera Mini|IEMobile/i)) {window.usabilla_live = lightningjs.require("usabilla_live", "\x2F\x2Fw.usabilla.com\x2F65faae774973.js"); } else {window.usabilla_live = lightningjs.require("usabilla_live", "\x2F\x2Fw.usabilla.com\x2Fefaf92c66c0c.js"); }/*]]>{/literal}*/</script>
 <!-- end usabilla live embed code -->
 
 <!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async="" defer="" src="//js.hs-scripts.com/454487.js"></script>
+<script type="text/javascript" id="hs-script-loader" defer="" src="//js.hs-scripts.com/454487.js"></script>
 <!-- End of HubSpot Embed Code -->
 
 <!-- Optimizely -->
-<script src="//cdn.optimizely.com/js/15388494.js"></script>
+<script src="//cdn.optimizely.com/js/15388494.js" defer=""></script>
 <!-- End Optimizely -->
 
 <!-- Start of Google Analytics Code -->
-<script>
+<script defer="">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -497,7 +498,7 @@ window.usabilla.load("w.usabilla.com", "e42049cc2be9");
 <!-- Google Tag Manager -->
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-56BR9R"
                   height=”0” width=”0” style=”display:none;visibility:hidden”></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script defer="">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -505,7 +506,7 @@ window.usabilla.load("w.usabilla.com", "e42049cc2be9");
 <!-- End Google Tag Manager -->
 
 <!-- Facebook Pixel Code -->
-<script>
+<script defer="">
     !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
             n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
         n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
