--- a/p/pa/pas/pastrywiz.com.html
+++ b/p/pa/pas/pastrywiz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pastrywiz.com privacy policy that was archived on 2017-03-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170325135154id_/http%3A//www.pastrywiz.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pastrywiz.com privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731033414id_/http%3A//pastrywiz.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement</title>
