--- a/9/99/99l/99localsearch.com.html
+++ b/9/99/99l/99localsearch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 99localsearch.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606114000id_/http%3A//www.99localsearch.com/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 99localsearch.com privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731085112id_/http%3A//www.99localsearch.com/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="Head1"><title>
 	99LocalSearch - Privacy Policy
@@ -128,15 +128,10 @@
     <!-- content -->
     <section id="content2">
 		<div class="main">
-        <form method="post" action="./PrivacyPolicy.aspx" id="contact_form">
-<div class="aspNetHidden">
+        <form name="contact_form" method="post" action="PrivacyPolicy.aspx" id="contact_form">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJNzgyMzcyMTcxZGSu516YGzzEfidwo6CPrq4TwLkM8A==">
-</div>
 
-<div class="aspNetHidden">
-
-	<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="7650BFE2">
-</div>
+<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="7650BFE2">
 			<div class="indent1" style="padding-top:5px; min-height:385px;">
 				<div class="wrapper">
                     <div id="msg" class=""></div>
