--- a/w/we/wer/werelate.org.html
+++ b/w/we/wer/werelate.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the werelate.org privacy policy that was archived on 2017-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170607120418id_/http%3A//www.werelate.org/wiki/WeRelate%3APrivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the werelate.org privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731100751id_/https%3A//www.werelate.org/wiki/WeRelate%3APrivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xml:lang="en" lang="en" dir="ltr"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -200,38 +200,19 @@
 <p>Removing text from WeRelate pages does not permanently delete it. In normal articles, anyone can look at a previous version and see what was there. If an article is "deleted", any user with "administrator" access on the wiki, meaning almost anyone trusted not to abuse the deletion capability, can see what was deleted. Information can be permanently deleted by those people with access to the servers, but there is no guarantee this will happen except in response to legal action.
 </p><p>This page is a derivative work of the Wikipedia Privacy policy page located at <a href="http://wikimediafoundation.org/wiki/Privacy_policy" class="external text" title="http://wikimediafoundation.org/wiki/Privacy_policy" rel="nofollow">Wikipedia Privacy Policy</a>
 </p>
-<!-- Saved in parser cache with key wikidb:pcache:idhash:2042283-0!1!0!0!!en!2!edit=0 and timestamp 20170607040115 -->
+<!-- Saved in parser cache with key wikidb:pcache:idhash:2042283-0!1!0!0!!en!2!edit=0 and timestamp 20170731082618 -->
 <div class="printfooter">
 Retrieved from "<a href="http://www.werelate.org/wiki/WeRelate:Privacy_policy">http://www.werelate.org/wiki/WeRelate:Privacy_policy</a>"</div>
                <a name="bottom" id="bottom"></a>
                               <!-- end content -->
             </td>
                            <td id="rhsadbox">
-                  <div id="rhsads" style="margin: 0 !important">
+                  <div id="rhsads">
 <div style="text-align: right; padding-right: 3px"><a href="/wiki/WeRelate:Donate">Don't want ads?</a></div>
 <div style="margin-top: 16px">
-<script src="http://genmeo.com/widget/ad_58d43916b7155.js" type="text/javascript"></script>
-<noscript>
-<iframe id="ad_58d43916b7155" name="ad_58d43916b7155" src="http://genmeo.com/widget/ad_58d43916b7155" frameborder="0" scrolling="no" width="300" height="250"></iframe>
-</noscript>
-</div>
-<!--
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
--->
-<!-- rhs-tall -->
-<!--
-<ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
-     data-ad-client="ca-pub-5042243421154153"
-     data-ad-slot="1056055215"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
--->
-<div style="margin-top: 16px">
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- rhs1 -->
-<ins class="adsbygoogle" style="display:inline-block;width:300px;height:250px" data-ad-client="ca-pub-5042243421154153" data-ad-slot="7381790410"></ins>
+<!-- rhs600 -->
+<ins class="adsbygoogle" style="display:inline-block;width:300px;height:600px" data-ad-client="ca-pub-5042243421154153" data-ad-slot="7402015214"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -255,7 +236,7 @@ Retrieved from "<a href="http://www.werelate.org/wiki/WeRelate:Privacy_policy">h
             				   <li id="about"><a href="/wiki/WeRelate:About" title="WeRelate:About">About WeRelate</a></li>
             				   <li id="disclaimer"><a href="/wiki/WeRelate:General_disclaimer" title="WeRelate:General disclaimer">Disclaimers</a></li>
             </ul>		</ul>
-      <!-- Served by ip-10-230-145-4 in 0.054 secs. -->   </div>
+      <!-- Served by ip-10-230-145-4 in 0.076 secs. -->   </div>
 </div>
 <script type="text/javascript">
 var pageRevid=13145333;
