--- a/y/yo/you/youcanlearnseries.com.html
+++ b/y/yo/you/youcanlearnseries.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the youcanlearnseries.com privacy policy that was archived on 2017-01-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170106172750id_/http%3A//youcanlearnseries.com/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youcanlearnseries.com privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731134523id_/http%3A//youcanlearnseries.com/privacypolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>PrivacyPolicy</title>
@@ -9,7 +9,7 @@
 		<meta content="http://schemas.microsoft.com/intellisense/ie5" name="vs_targetSchema">
 	</head>
 	<body>
-		<form name="ctl00" method="post" action="/privacypolicy.aspx" id="ctl00">
+		<form name="ctl00" method="post" action="privacypolicy.aspx" id="ctl00">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTE2ODAzMjg5NTNkZIMZV3BqYITE+keLVvytNbLec07S">
 
 <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWAwL7sOTuBAKpzO/sCALf29SVAogboeCyKy1cc7i27gohjgzCJOgB">
