--- a/z/zo/zot/zotero.org.html
+++ b/z/zo/zot/zotero.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zotero.org privacy policy that was archived on 2017-04-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170407111934id_/https%3A//www.zotero.org/support/terms/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zotero.org privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731214848id_/https%3A//www.zotero.org/support/terms/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -39,7 +39,7 @@
   </script>
   
   <!-- css -->
-    <link rel="stylesheet" href="/static/css/style.1485925499.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="/static/css/style.1499737272.css" type="text/css" media="screen" charset="utf-8">
     <!--<script type="text/javascript" charset="utf-8" src="/static/library/jquery/jquery-1.3.2-ui-1.7.1.min.js"></script>-->
     <script type="text/javascript" charset="utf-8" src="/static/library/jquery/jquery-1.6.2-ui-1.8.15-custom.min.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -103,6 +103,7 @@
     <div id="content">
         <div class="center container">
 <div class="dokuwiki container">
+
   
     <div id="breadcrumbs">
     <span class="bchead">You are here: </span><span class="home"><bdi><a href="/support/start" class="wikilink1" title="start">start</a></bdi></span> &gt; <bdi><a href="/support/terms/start" class="wikilink1" title="terms:start">terms</a></bdi> &gt; <bdi><span class="curid"><a href="/support/terms/privacy" class="wikilink1" title="terms:privacy">privacy</a></span></bdi>  </div>
@@ -118,7 +119,12 @@
   
   
   <div class="page major-col">
-      <div class="plugin_translation"><span>Translations of this page:</span> <ul>  <li><div class="li"><span class="curid"><a href="/support/terms/privacy" class="wikilink1" title="terms:privacy">en</a></span></div></li>  <li><div class="li"><a href="/support/ar/terms/privacy" class="wikilink2" title="ar:terms:privacy" rel="nofollow">ar</a></div></li>  <li><div class="li"><a href="/support/cs/terms/privacy" class="wikilink2" title="cs:terms:privacy" rel="nofollow">cs</a></div></li>  <li><div class="li"><a href="/support/da/terms/privacy" class="wikilink2" title="da:terms:privacy" rel="nofollow">da</a></div></li>  <li><div class="li"><a href="/support/de/terms/privacy" class="wikilink2" title="de:terms:privacy" rel="nofollow">de</a></div></li>  <li><div class="li"><a href="/support/es/terms/privacy" class="wikilink2" title="es:terms:privacy" rel="nofollow">es</a></div></li>  <li><div class="li"><a href="/support/fa/terms/privacy" class="wikilink2" title="fa:terms:privacy" rel="nofollow">fa</a></div></li>  <li><div class="li"><a href="/support/fr/terms/privacy" class="wikilink2" title="fr:terms:privacy" rel="nofollow">fr</a></div></li>  <li><div class="li"><a href="/support/hbs/terms/privacy" class="wikilink2" title="hbs:terms:privacy" rel="nofollow">hbs</a></div></li>  <li><div class="li"><a href="/support/hu/terms/privacy" class="wikilink2" title="hu:terms:privacy" rel="nofollow">hu</a></div></li>  <li><div class="li"><a href="/support/id/terms/privacy" class="wikilink2" title="id:terms:privacy" rel="nofollow">id</a></div></li>  <li><div class="li"><a href="/support/it/terms/privacy" class="wikilink2" title="it:terms:privacy" rel="nofollow">it</a></div></li>  <li><div class="li"><a href="/support/ja/terms/privacy" class="wikilink2" title="ja:terms:privacy" rel="nofollow">ja</a></div></li>  <li><div class="li"><a href="/support/ko/terms/privacy" class="wikilink2" title="ko:terms:privacy" rel="nofollow">ko</a></div></li>  <li><div class="li"><a href="/support/nl/terms/privacy" class="wikilink2" title="nl:terms:privacy" rel="nofollow">nl</a></div></li>  <li><div class="li"><a href="/support/pl/terms/privacy" class="wikilink2" title="pl:terms:privacy" rel="nofollow">pl</a></div></li>  <li><div class="li"><a href="/support/pt/terms/privacy" class="wikilink2" title="pt:terms:privacy" rel="nofollow">pt</a></div></li>  <li><div class="li"><a href="/support/ru/terms/privacy" class="wikilink1" title="ru:terms:privacy">ru</a></div></li>  <li><div class="li"><a href="/support/sl/terms/privacy" class="wikilink2" title="sl:terms:privacy" rel="nofollow">sl</a></div></li>  <li><div class="li"><a href="/support/sv/terms/privacy" class="wikilink2" title="sv:terms:privacy" rel="nofollow">sv</a></div></li>  <li><div class="li"><a href="/support/tr/terms/privacy" class="wikilink2" title="tr:terms:privacy" rel="nofollow">tr</a></div></li>  <li><div class="li"><a href="/support/zh/terms/privacy" class="wikilink2" title="zh:terms:privacy" rel="nofollow">zh</a></div></li></ul></div>    <!-- wikipage start -->
+      <div class="plugin_translation"><span>Translations of this page:</span> <ul>  <li><div class="li"><span class="curid"><a href="/support/terms/privacy" class="wikilink1" title="terms:privacy">en</a></span></div></li>  <li><div class="li"><a href="/support/ar/terms/privacy" class="wikilink2" title="ar:terms:privacy" rel="nofollow">ar</a></div></li>  <li><div class="li"><a href="/support/cs/terms/privacy" class="wikilink2" title="cs:terms:privacy" rel="nofollow">cs</a></div></li>  <li><div class="li"><a href="/support/da/terms/privacy" class="wikilink2" title="da:terms:privacy" rel="nofollow">da</a></div></li>  <li><div class="li"><a href="/support/de/terms/privacy" class="wikilink2" title="de:terms:privacy" rel="nofollow">de</a></div></li>  <li><div class="li"><a href="/support/es/terms/privacy" class="wikilink2" title="es:terms:privacy" rel="nofollow">es</a></div></li>  <li><div class="li"><a href="/support/fa/terms/privacy" class="wikilink2" title="fa:terms:privacy" rel="nofollow">fa</a></div></li>  <li><div class="li"><a href="/support/fr/terms/privacy" class="wikilink2" title="fr:terms:privacy" rel="nofollow">fr</a></div></li>  <li><div class="li"><a href="/support/hbs/terms/privacy" class="wikilink2" title="hbs:terms:privacy" rel="nofollow">hbs</a></div></li>  <li><div class="li"><a href="/support/hu/terms/privacy" class="wikilink2" title="hu:terms:privacy" rel="nofollow">hu</a></div></li>  <li><div class="li"><a href="/support/id/terms/privacy" class="wikilink2" title="id:terms:privacy" rel="nofollow">id</a></div></li>  <li><div class="li"><a href="/support/it/terms/privacy" class="wikilink2" title="it:terms:privacy" rel="nofollow">it</a></div></li>  <li><div class="li"><a href="/support/ja/terms/privacy" class="wikilink2" title="ja:terms:privacy" rel="nofollow">ja</a></div></li>  <li><div class="li"><a href="/support/ko/terms/privacy" class="wikilink2" title="ko:terms:privacy" rel="nofollow">ko</a></div></li>  <li><div class="li"><a href="/support/nl/terms/privacy" class="wikilink2" title="nl:terms:privacy" rel="nofollow">nl</a></div></li>  <li><div class="li"><a href="/support/pl/terms/privacy" class="wikilink2" title="pl:terms:privacy" rel="nofollow">pl</a></div></li>  <li><div class="li"><a href="/support/pt/terms/privacy" class="wikilink2" title="pt:terms:privacy" rel="nofollow">pt</a></div></li>  <li><div class="li"><a href="/support/ru/terms/privacy" class="wikilink1" title="ru:terms:privacy">ru</a></div></li>  <li><div class="li"><a href="/support/sl/terms/privacy" class="wikilink2" title="sl:terms:privacy" rel="nofollow">sl</a></div></li>  <li><div class="li"><a href="/support/sv/terms/privacy" class="wikilink2" title="sv:terms:privacy" rel="nofollow">sv</a></div></li>  <li><div class="li"><a href="/support/tr/terms/privacy" class="wikilink2" title="tr:terms:privacy" rel="nofollow">tr</a></div></li>  <li><div class="li"><a href="/support/zh/terms/privacy" class="wikilink2" title="zh:terms:privacy" rel="nofollow">zh</a></div></li></ul></div>      
+  <p style="color: red; font-weight: bold">We're in the process of updating the documentation for
+  <a href="https://www.zotero.org/blog/zotero-5-0">Zotero 5.0</a>. Some documentation may be outdated
+  in the meantime. Thanks for your understanding.</p>
+      
+    <!-- wikipage start -->
     
 <h1 class="sectionedit1" id="privacy">Privacy</h1>
 <div class="level1">
@@ -263,7 +269,7 @@ You can read our full privacy policy at the following page:
 
 </div>
 
-<div class="no"><img src="/support/lib/exe/indexer.php?id=terms%3Aprivacy&amp;1491563974" width="2" height="1" alt=""></div>
+<div class="no"><img src="/support/lib/exe/indexer.php?id=terms%3Aprivacy&amp;1501537728" width="2" height="1" alt=""></div>
         </div>
     </div>
     <footer>
