--- a/p/pa/pac/pachube.com.html
+++ b/p/pa/pac/pachube.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pachube.com privacy policy that was archived on 2017-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170614064252id_/https%3A//secure.logmein.com/home/policies/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pachube.com privacy policy that was archived on 2017-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170731232926id_/https%3A//secure.logmein.com/home/policies/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700,300" type="text/css" rel="stylesheet"><link href="//logmeincdn.azureedge.net/lmimedia/2017-06-13--143720/styles/main.css" type="text/css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700,300" type="text/css" rel="stylesheet"><link href="//logmeincdn.azureedge.net/lmimedia/2017-07-18--155811/styles/main.css" type="text/css" rel="stylesheet">
 <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-52GR"></script><script src="//cdn.optimizely.com/js/105528584.js" type="text/javascript"></script>
 
     
@@ -67,8 +67,9 @@ j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; 
                             <li><a data-gaeventaction="body_legal_terms-conditions" data-gaeventcategory="navigation" data-target-id="befb44ef-a8cd-4ff1-bd08-acf4412dd426" href="/home/policies/terms-and-conditions">Terms of Service</a></li>
                             <li><a data-target-id="da2e72be-6b7a-48cc-8f2c-78c83a1b8678" href="/home/policies/service-descriptions">Service Descriptions</a></li>
                             <li><a data-target-id="ff5270a2-0869-4844-8aa7-857e1659d209" href="/home/policies/getgo-contracting-entities">Contracting Entities</a></li>
-                            <li><a href="https://logmeincdn.azureedge.net/legal/20170201/DPA/LMIDataProcessingAddendum2017.v1SAMPLE.pdf" target="_blank">English Sample Data Processing Addendum</a></li>
                             <li><a data-target-id="3cc9449d-8562-4132-9295-bac5398c7004" href="/home/policies/remittance-table">Payment Remittance Table</a></li>
+                            <li><a href="https://logmeincdn.azureedge.net/legal/20170201/DPA/LMIDataProcessingAddendum2017.v1SAMPLE.pdf" target="_blank">English Sample Data Processing Addendum</a></li>
+                            <li><a data-target-id="18b597d6-0908-4f6b-8eea-0c1ebbedff6c" href="/home/policies/code-of-practice">Technical and Organizational Security Measures (TOMS)</a></li>
                             <li><a data-gaeventaction="body_legal_dmca" data-gaeventcategory="navigation" data-target-id="36de7218-dcd4-48a5-a6e2-7f7f5bf8ac64" href="/home/policies/dmca">Digital Millennium Copyright Act (DMCA) Notice</a></li>
                             <li><a data-gaeventaction="body_legal_trademark" data-gaeventcategory="navigation" data-target-id="72585dd1-d0d0-49f6-bb6b-1b7c07a4e833" href="/home/policies/trademark">Trademark and Other Intellectual Property Information</a></li>
                             <li><a data-gaeventaction="body_legal_community-terms" data-gaeventcategory="navigation" data-target-id="07bf3df2-4720-4878-8b03-af02f6dc8e2b" href="/home/policies/community-terms-and-conditions">LogMeIn Community Terms &amp; Conditions</a></li>
@@ -399,6 +400,6 @@ j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; 
 	</div>
 </div>
 
-<script src="//fast.wistia.com/assets/external/E-v1.js" type="text/javascript"></script><script src="//logmeincdn.azureedge.net/lmimedia/2017-06-13--143720/scripts/app.js" type="text/javascript"></script>
+<script src="//fast.wistia.com/assets/external/E-v1.js" type="text/javascript"></script><script src="//logmeincdn.azureedge.net/lmimedia/2017-07-18--155811/scripts/app.js" type="text/javascript"></script>
 
 </body></html>
