--- a/r/re/rea/realestateshows.com.html
+++ b/r/re/rea/realestateshows.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realestateshows.com privacy policy that was archived on 2017-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170614112455id_/http%3A//www.realestateshows.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realestateshows.com privacy policy that was archived on 2017-08-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170802013206id_/http%3A//realestateshows.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Real Estate Shows</title>
