punchpin.com (archived on 2017-08-02)
{
  "alexa_rank": 203212,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 6679,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.37,
  "homepage_snapshot_redirected_domain": "punchpin.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170930171835id_/http://punchpin.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170930171835id_/http%3A//punchpin.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "punchpin.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170802024418id_/http%3A//punchpin.com/privacy.html",
  "policy_title": "PunchPin - Sexy pictures and cool stuff for guys.",
  "policy_url": "punchpin.com/privacy.html",
  "sha1": "6429690b4b40e195cdc097dc3938c0ee2435cc74",
  "simhash": 6394997791013510372,
  "simhash_updated": false,
  "site_hostname": "punchpin.com",
  "site_url": "http://punchpin.com",
  "smog": 14.07,
  "strict_updated": false,
  "timestamp": "20170802024418",
  "word_count": 1094,
  "year": 2017
}

--- a/p/pu/pun/punchpin.com.html
+++ b/p/pu/pun/punchpin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the punchpin.com privacy policy that was archived on 2016-02-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160206182455id_/http%3A//www.punchpin.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the punchpin.com privacy policy that was archived on 2017-08-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170802024418id_/http%3A//punchpin.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:fb="http://ogp.me/ns/fb#"><head>
 <!-- Start Alexa Certify Javascript -->
@@ -68,8 +68,34 @@ fjs.parentNode.insertBefore(js, fjs);
 <!-- HEADER -->
 <!-- BEGIN header block -->
 <meta name="exads-verify" content="0dcc16370c352884eb17">
-<!--<div class="forsalediv">PUNCHPIN is for SALE! <a href="/for-sale.html">More info here/make an offer</a></div>-->
-<div class="clr"></div>
+<div class="forsalediv">PUNCHPIN is for SALE! <a href="/for-sale.html">More info here/make an offer</a></div>
+<div class="clr">
+<script>
+//$(document).click(function() {
+//if (sessionStorage.getItem('visited') == null) {
+//	window.open("https://showussexy.com", "showussexy");
+//	sessionStorage.setItem("visited", "Ja");
+//	sessionStorage.setItem("clickTimes", 1);
+//}
+//else
+//{
+//	var clicks = sessionStorage.getItem('clickTimes');
+//	sessionStorage.setItem("clickTimes", clicks + 1)
+//}
+//alert(sessionStorage.getItem("clickTimes"));
+//if (sessionStorage.getItem('clickTimes') == '11111111111111111111111111111') {
+//	window.open("https://showussexy.com", "showussexy");
+//	sessionStorage.setItem("clickTimes", '1');
+//}
+//});
+//$(document).one("click",function() { window.open("https://showussexy.com", "showussexy");});
+</script>
+//Leave this here
+var uid = '121606';
+var wid = '248663';
+
+<!--<script type="text/javascript" src="//cdn.popcash.net/pop.js"></script>-->
+</div>
 <!--<script type="text/javascript" src="//clickadu.com/apu.php?zoneid=365591"></script>-->
 <div class="header">
 <div class="header_r">
@@ -77,8 +103,9 @@ fjs.parentNode.insertBefore(js, fjs);
 <div class="logo">
 <a href="/"></a>
 </div>
-<div class="social_links"><div class="fb-like" data-href="https://www.facebook.com/PunchPin" data-send="false" data-layout="button_count" data-width="80" data-show-faces="false"></div><br>
-<a href="https://twitter.com/PunchPinTweets" class="twitter-follow-button" data-show-count="false"></a>
+<div class="social_links">
+<!--<div class="fb-like" data-href="https://www.facebook.com/PunchPin" data-send="false" data-layout="button_count" data-width="80" data-show-faces="false"></div><br>
+<a href="https://twitter.com/PunchPinTweets" class="twitter-follow-button" data-show-count="false"></a>-->
 <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script></div>
 <div class="autorith">
 <div class="invite">
@@ -96,12 +123,12 @@ fjs.parentNode.insertBefore(js, fjs);
 <div class="clr"></div>
 </div>
 <div class="clr"></div>
-<div class="menu" align="center">
-<a href="http://gdc.adtrkr1.com/?a=278&amp;c=10&amp;s1=banned" target="_blank"><img src="/images/Banner1.gif" border="0"></a>
-<!--JuicyAds v2.0
+<!--<div class="menu" align="center">
+<a href="http://gdc.adtrkr1.com/?a=278&c=10&s1=banned" target="_blank" ><img src="/images/Banner1.gif" border="0"></a>
+JuicyAds v2.0
 <iframe border=0 frameborder=0 marginheight=0 marginwidth=0 width=728 height=102 scrolling=no allowtransparency=true src=http://adserver.juicyads.com/adshow.php?adzone=446420></iframe>
-JuicyAds END-->
-</div>
+JuicyAds END
+</div>-->
 <!--
 <div class="menu" align="center">
 <script async src="https://cdn.exoticads.com/xads.js"></script>
@@ -112,11 +139,32 @@ data-ad-zone="SSl1cXEu0ZnhZe" ></ins>
 (adsbyxa = window.adsbyxa || []).push({});
 </script>
 </div>-->
+<div class="menu" align="center">
+<script type="text/javascript">
+var ad_idzone = "2124849",
+ad_width = "728",
+ad_height = "90";
+</script>
+<script type="text/javascript" src="https://ads.exoclick.com/ads.js"></script>
+<noscript><a href="http://main.exoclick.com/img-click.php?idzone=2124849" target="_blank"><img src="https://syndication.exoclick.com/ads-iframe-display.php?idzone=2124849&output=img&type=728x90" width="728" height="90"></a></noscript>
 <br>
-<!--   <div class="menu" align="center">
-We will be adding cool/manly/great priced new products all the time.  Check back often.
+<br>
+<div style="margin-bottom: 5px;"><font color="white" size="5">Introducing <br><a href="http://www.showussexy.com" target="_blank"></a></font></div><font color="white" size="5"><a href="http://www.showussexy.com" target="_blank">
+</a><div style="margin-bottom: 10px;"><a href="http://www.showussexy.com" target="_blank"><font color="white" size="7">Showussexy.com</font></a></div>Our censorship free playground for open minded, fun-loving adults and swingers.
+<br>
+</font><div style="margin-top: 5px;"><font color="white" size="5">A REAL fun loving community of adults.</font></div>
+<br>
+<br>
+<!--<a href="http://showussexy.com/" target="_blank" rel="nofollow" >NEW <font color="white" size="5"><u>Anyone want to show off their real pictures?  Check out our new social media site.  Swingers encouraged to join for free.</u></font></a>
+</br>-->
+<a href="http://sexpornlist.net/" target="_blank" rel="dofollow">Pin Porn Sites List</a>
+<br>
+<a href="http://thepornlist.com/" target="_blank" rel="dofollow">Best Pin Porn Sites</a>
+<!--</br>
+<a href="http://theporndude.com/" target="_blank" >Best Pin Porn Sites</a>-->
 </div>
-<div class="header_ppbutton_callout2"><font color="#00000"><a href="http://www.punchpinstore.com" target="_blank"><font color="#00000">Visit the NEW PUNCHPIN Store!</font></a></font></div>
+<br>
+<!--<div class="header_ppbutton_callout2"><font color="#00000"><a href="http://www.punchpinstore.com" target="_blank"><font color="#00000">Visit the NEW PUNCHPIN Store!</font></a></font></div>
 <br/>-->
 <div class="header_ppbutton_callout"><font color="#fff">Post images with the <a href="/using-punchpin.html">PUNCHPIN Button - Get it here!</a></font></div>
 <br>
@@ -135,55 +183,34 @@ We will be adding cool/manly/great priced new products all the time.  Check back
 </div>-->
 <!-- -BEGIN fb_script -->
 <script>
-document.getElementById('fb-login').onclick = function() {
-FB.login(function(response) {
+//document.getElementById('fb-login').onclick = function() {
+//  FB.login(function(response) {
 //Log.info('FB.login callback', response);
-if (response.status === 'connected') {
+//    if (response.status === 'connected') {
 //Log.info('User is logged in');
-window.location = '/signup.html';
-} else {
+//      window.location = '/signup.html';
+//    } else {
 //Log.info('User is logged out');
-}
-});
-};
-window.fbAsyncInit = function() {
-FB.init({
-appId   : '165516180235181',
-status  : true, // check login status
-cookie  : true, // enable cookies to allow the server to access the session
-xfbml   : true // parse XFBML
-});
-//FB.Canvas.setSize();
-//FB.Canvas.setSize({ width: 800, height: 600});
-// whenever the user logs in, we refresh the page
-FB.Event.subscribe('auth.login', function() {
-//if (window.location.pathname != '/signup.html') {
-setTimeout('window.location.reload()', 1000);
-//} else {
-//    window.location.href = '/';
-//}
-});
-/*FB.Event.subscribe('auth.authResponseChange', function() {
-if (window.location.pathname != '/signup.html') {
-window.location.reload();
-} else {
-window.location.href = '/';
-}
-});
-FB.Event.subscribe('auth.statusChange', function() {
-if (window.location.pathname != '/signup.html') {
-window.location.reload();
-} else {
-window.location.href = '/';
-}
-});*/
-};
-(function() {
-var e = document.createElement('script');
-e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
-e.async = true;
-document.getElementById('fb-root').appendChild(e);
-}());
+//    }
+//  });
+//};
+//window.fbAsyncInit = function() {
+//  FB.init({
+//    appId   : '165516180235181',
+//   status  : true, // check login status
+//    cookie  : true, // enable cookies to allow the server to access the session
+//    xfbml   : true // parse XFBML
+//  });
+//  FB.Event.subscribe('auth.login', function() {
+//    setTimeout('window.location.reload()', 1000);
+//  });
+//};
+//(function() {
+//  var e = document.createElement('script');
+//  e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+//  e.async = true;
+//  document.getElementById('fb-root').appendChild(e);
+//}());
 </script>
 <!-- -END fb_script -->
 <!--<a href="/signup.html">Sign in here and get the PUNCHPIN button so you can start pinning dude!</a>--><!-- END if_not_user_loggedin -->
@@ -193,8 +220,7 @@ document.getElementById('fb-root').appendChild(e);
 <!-- BEGIN if_user_loggedin2 -->
 <div class="clr"></div>
 <ul class="menu1">
-<li><a href="http://www.punchpin.com/blog" target="_blank" rel="nofollow">PUNCHPIN BLOG</a></li>
-<li><a href="http://punchpin.com/blog/web-cams/" target="_blank" rel="nofollow">WEB CAMS</a></li>
+<li><a href="http://Showussexy.com" target="_blank" rel="nofollow"><font color="lightgreen">OUR ADULT PLAYGROUND</font></a></li>
 <li><a href="/Nudes/search.html" rel="noindex">NUDES</a></li>
 <li><a href="/Bikini-Babes/search.html">BIKINI BABES</a></li>
 <li><a href="/Funny-Cr-p/search.html">FUNNY CR@P</a></li>
@@ -409,15 +435,18 @@ document.getElementById('fb-root').appendChild(e);
 <li><a href="http://www.yourmunky.com/" target="_blank" rel="nofollow">YourMunky</a></li>
 </ul>
 <ul class="left footer_friend_box">
-<li><a href="http://www.thesmokingjacket.com/" target="_blank">The Smoking Jacket</a></li>
+<li><a href="http://www.thesmokingjacket.com/" target="_blank" rel="nofollow">The Smoking Jacket</a></li>
 <li><a href="http://www.ClassyBro.com/" target="_blank" rel="nofollow">ClassyBro</a></li>
 <li><a href="http://www.stevenhumour.com/" target="_blank" rel="nofollow">Steven Humour</a></li>
 <li><a href="http://www.thesharkguys.com/" target="_blank" rel="nofollow">The Shark Guys</a></li>
 <li><a href="http://www.frickenfunnyvids.com/" target="_blank" rel="nofollow">Fricken Funny Vids</a></li>
 </ul>
 <ul class="right footer_friend_box">
-<li><a href="http://theporndude.com/" target="_blank" rel="nofollow">Best Pin Porn Sites</a></li>
-<li><a href="http://mypornbookmarks.com/" target="_blank" rel="nofollow">MyPornBookmarks</a></li>
+<!--<li><a href="http://theporndude.com/" target="_blank" rel="nofollow" >Best Pin Porn Sites</a></li>-->
+<li><a href="http://thepornlist.com/" target="_blank" rel="nofollow">Best Pin Porn Sites</a></li>
+<li><a href="http://best-paypornsites.net/" target="_blank" rel="nofollow">Best Pay Porn Sites</a></li>
+<li><a href="http://mypornbible.com/" target="_blank" rel="nofollow">MyPorn Bible</a></li>
+<li><a href="http://sexpornlist.net/" target="_blank" rel="dofollow">Pin Porn Sites List</a></li>
 <li><a href="http://www.ystare.com" target="_blank" rel="nofollow">YSTARE girl pics</a></li>
 <li><a href="http://www.shavemagazine.com/" target="_blank" rel="nofollow">Shave Magazine</a></li>
 <li><a href="http://www.tabloidtruths.com/" target="_blank" rel="nofollow">Tabloid Truths</a></li>
@@ -451,5 +480,6 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 })();
 </script>
 <!-- END footer block -->
+
 
 </body></html>
