--- a/i/in/inb/inboundedu.com.html
+++ b/i/in/inb/inboundedu.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the inboundedu.com privacy policy that was archived on 2016-10-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161022181955id_/http%3A//inboundedu.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inboundedu.com privacy policy that was archived on 2017-08-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170802081618id_/http%3A//inboundedu.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class=" webkit chrome linux js"><head>
 <!-- 5lEzx6oZ31lH3gsmq8A9gzD88eA -->
@@ -45,9 +45,10 @@ prefs.setCharPref('browser.startup.homepage', 'http://www.inboundedu.com/');
 </title>
 <link href="css/menu.css" rel="stylesheet" type="text/css" media="all"><link href="css/content.css" rel="stylesheet" type="text/css" media="all"><link href="css/programs.css" rel="stylesheet" type="text/css" media="all"><link href="css/articleDetail.css" rel="stylesheet" type="text/css" media="all"><link href="css/programsDetail.css" rel="stylesheet" type="text/css" media="all"><link href="css/articles.css" rel="stylesheet" type="text/css" media="all"><link href="css/dropsFinder.css" rel="stylesheet" type="text/css" media="all"><link href="css/articleDetail.css" rel="stylesheet" type="text/css" media="all"><link href="css/default.css" rel="stylesheet" type="text/css" media="all"><link href="css/results.css" rel="stylesheet" type="text/css" media="all"><link href="css/footer.css" rel="stylesheet" type="text/css" media="all"><link href="css/listnav.css" rel="stylesheet" type="text/css" media="all"><link href="css/pagerContainer.css" rel="stylesheet" type="text/css" media="all"><link href="css/defaultMaster.css" rel="stylesheet" type="text/css" media="all"></head>
 <body>
-    <form name="aspnetForm" method="post" action="/privacy.aspx" id="aspnetForm">
+    <form name="aspnetForm" method="post" action="privacy.aspx" id="aspnetForm">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTY1NDU2MTA1Mg9kFgJmD2QWAgIBD2QWAmYPFgYeA3NyYwUcaW1hZ2VzL2xvZ29zL2xvZ29EZWZhdWx0LnBuZx4DYWx0BQpJbmJvdW5kZWR1HgdWaXNpYmxlZ2RkUZ5r5HKpj85nA5XeQ7XeurJxBHI=">
 
+<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="EAA40B43">
     <div id="main">
         <div id="header">
         <div class="headContent">
