genesreunited.co.uk (archived on 2017-08-02)
{
  "alexa_rank": 161464,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 20609,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.05,
  "homepage_snapshot_redirected_domain": "genesreunited.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170930232056id_/http://www.genesreunited.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170930232056id_/http%3A//genesreunited.co.uk",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "genesreunited.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170802104945id_/http%3A//www.genesreunited.co.uk/contents/legalprivacypolicy",
  "policy_title": "Genes Reunited",
  "policy_url": "genesreunited.co.uk/contents/legalprivacypolicy",
  "sha1": "581f55f0d70e1504f1b1c69e37b3ba2ae7bcabd6",
  "simhash": 8720801118856448061,
  "simhash_updated": false,
  "site_hostname": "genesreunited.co.uk",
  "site_url": "http://genesreunited.co.uk",
  "smog": 12.63,
  "strict_updated": false,
  "timestamp": "20170802104945",
  "word_count": 3458,
  "year": 2017
}

--- a/g/ge/gen/genesreunited.co.uk.html
+++ b/g/ge/gen/genesreunited.co.uk.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the genesreunited.co.uk privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606090352id_/http%3A//www.genesreunited.co.uk/contents/legalprivacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the genesreunited.co.uk privacy policy that was archived on 2017-08-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170802104945id_/http%3A//www.genesreunited.co.uk/contents/legalprivacypolicy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" class="no-js"><!-- Server="FH1-GR04" --><!-- User="Anon" --><!-- Key="0" --><!-- Version="0012" --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" class="no-js"><!-- Server="FH1-GR18" --><!-- User="Anon" --><!-- Key="0" --><!-- Version="0012" --><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Genes Reunited</title>
@@ -323,13 +323,14 @@
     </div>
     <div class="panel info">
     <div class="header nomargin">
-        <h2>New Scottish Census</h2>
+        <h2>Gift subscriptions</h2>
     </div>
-    <a href="/articles/world-records/full-list-of-united-kingdom-records/census-land-and-surveys/census/1901-england-wales-and-scotland-census"><img src="/_Resources/images/adverts/internal/scotpromo-3col.jpg" alt="New Scottish census records"></a>
+    <a href="/payments/subscription?isgift=true"><img src="/_Resources/images/gifting/gifting-3col.jpg" alt="Genes Reunited gift subscription"></a>
     <div class="body">
-        <h2 style="margin-bottom: 6px; font-size: 16px">Do you have Scottish ancestors?</h2>
-        <p>Perhaps you do and you just didn't know! Search our brand new Scottish census records today and discover if you have Scottish roots.</p>
-        <p><a class="button alt" href="/articles/world-records/full-list-of-united-kingdom-records/census-land-and-surveys/census/1901-england-wales-and-scotland-census">Search Scottish Census</a> </p>
+        <h2 style="margin-bottom: 6px; font-size: 15px">Do you know someone interested in discovering their family history?</h2>
+        <p>You can now buy a gift subscription to Genes Reunited so they can research their family tree.</p>
+        <p><a class="button alt" href="/payments/subscription?isgift=true">Buy gift</a> 
+            <a href="/account/redeemgiftvoucher">or redeem gift</a></p>
     </div>
 </div>
     
@@ -691,7 +692,7 @@
             <div class="grid_3 bdr-left">
                 <p>All site material is owned by brightsolid online publishing limited and should not be used without prior permission.</p>
                 <p>Any views expressed in message boards and members notes represent the opinions of the author and do not represent the opinions of brightsolid online publishing limited.</p>
-                <p>© Copyright 2014 brightsolid online publishing limited.</p>
+                <p>© Copyright 2017 brightsolid online publishing limited.</p>
             </div>
         </div>
     </div>
