tech-information.in (archived on 2017-08-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;newsandmedia",
  "char_count": 4730,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.64,
  "homepage_snapshot_redirected_domain": "tech-information.in",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171006085805id_/http://www.tech-information.in/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171006085805id_/http%3A//tech-information.in",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tech-information.in",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170802191408id_/http%3A//www.tech-information.in/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "tech-information.in/privacy-policy",
  "sha1": "7c6e72eb02e5ad06c1f6562ac61f849422106a30",
  "simhash": 447884678762307605,
  "simhash_updated": false,
  "site_hostname": "tech-information.in",
  "site_url": "http://tech-information.in",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170802191408",
  "word_count": 766,
  "year": 2017
}

--- a/t/te/tec/tech-information.in.html
+++ b/t/te/tec/tech-information.in.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the tech-information.in privacy policy that was archived on 2017-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602105051id_/http%3A//www.tech-information.in/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tech-information.in privacy policy that was archived on 2017-08-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170802191408id_/http%3A//www.tech-information.in/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US" prefix="og: http://ogp.me/ns#"><head>
 <meta charset="UTF-8">
 <title>Privacy Policy</title><meta name="viewport" content="width=device-width, initial-scale=1">
 				<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript">
-					var bhittani_plugin_kksr_js = {"nonce":"9ca7de8ff6","grs":true,"ajaxurl":"http:\/\/www.tech-information.in\/wp-admin\/admin-ajax.php","func":"kksr_ajax","msg":"Rate this post","fuelspeed":0,"thankyou":"Thank you for your vote","error_msg":"An error occurred","tooltip":"1","tooltips":[{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"}]};
+					var bhittani_plugin_kksr_js = {"nonce":"69cdad2cb3","grs":true,"ajaxurl":"http:\/\/www.tech-information.in\/wp-admin\/admin-ajax.php","func":"kksr_ajax","msg":"Rate this post","fuelspeed":0,"thankyou":"Thank you for your vote","error_msg":"An error occurred","tooltip":"1","tooltips":[{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"},{"tip":"","color":"#ffffff"}]};
 				</script>
 				
 <!-- This site is optimized with the Yoast SEO plugin v4.1 - https://yoast.com/wordpress/plugins/seo/ -->
@@ -136,7 +136,7 @@ By using our website, you hereby consent to our privacy policy and agree to its 
 
 <div style="font-size:0px;height:0px;line-height:0px;margin:0;padding:0;clear:both"></div></div></article></main><aside class="sidebar sidebar-primary widget-area" role="complementary" aria-label="Primary Sidebar" itemscope="" itemtype="http://schema.org/WPSideBar"><section id="search-3" class="widget widget_search"><div class="widget-wrap"><form class="search-form" itemprop="potentialAction" itemscope="" itemtype="http://schema.org/SearchAction" method="get" action="http://www.tech-information.in/" role="search"><meta itemprop="target" content="http://www.tech-information.in/?s={s}"><input itemprop="query-input" type="search" name="s" placeholder="Search this website …"><input type="submit" value="Search"></form></div></section>
 <section id="calendar-2" class="widget widget_calendar"><div class="widget-wrap"><div id="calendar_wrap" class="calendar_wrap"><table id="wp-calendar">
-	<caption>June 2017</caption>
+	<caption>August 2017</caption>
 	<thead>
 	<tr>
 		<th scope="col" title="Monday">M</th>
@@ -159,20 +159,20 @@ By using our website, you hereby consent to our privacy policy and agree to its 
 
 	<tbody>
 	<tr>
-		<td colspan="3" class="pad">&nbsp;</td><td>1</td><td id="today">2</td><td>3</td><td>4</td>
+		<td colspan="1" class="pad">&nbsp;</td><td>1</td><td id="today">2</td><td>3</td><td>4</td><td>5</td><td>6</td>
 	</tr>
 	<tr>
-		<td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td>
+		<td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td>
 	</tr>
 	<tr>
-		<td>12</td><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td>18</td>
+		<td>14</td><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td><td>20</td>
 	</tr>
 	<tr>
-		<td>19</td><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td><td>25</td>
+		<td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td>
 	</tr>
 	<tr>
-		<td>26</td><td>27</td><td>28</td><td>29</td><td>30</td>
-		<td class="pad" colspan="2">&nbsp;</td>
+		<td>28</td><td>29</td><td>30</td><td>31</td>
+		<td class="pad" colspan="3">&nbsp;</td>
 	</tr>
 	</tbody>
 	</table></div></div></section>
