whoneedstv.com (archived on 2017-08-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 4141,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 9.45,
  "homepage_snapshot_redirected_domain": "whoneedstv.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171007232635id_/https://whoneedstv.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171007232635id_/http%3A//whoneedstv.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "whoneedstv.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170803025604id_/https%3A//whoneedstv.com/privacy.php",
  "policy_title": "Privacy Policy - WhoNeedsTV.com is all about internet video humor with a twist of irony that offers a collection of funny videos, funny movies, classic TV ads, virals, silly pictures, viral marketing, digital marketing, interactive media, viral seeding & viral deployment.",
  "policy_url": "whoneedstv.com/privacy.php",
  "sha1": "2d07a60031e37e02c82feec11e277ba134d44f29",
  "simhash": 18089337687549970518,
  "simhash_updated": false,
  "site_hostname": "whoneedstv.com",
  "site_url": "http://whoneedstv.com",
  "smog": 11.92,
  "strict_updated": false,
  "timestamp": "20170803025604",
  "word_count": 786,
  "year": 2017
}

--- a/w/wh/who/whoneedstv.com.html
+++ b/w/wh/who/whoneedstv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the whoneedstv.com privacy policy that was archived on 2015-03-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150324064537id_/https%3A//whoneedstv.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whoneedstv.com privacy policy that was archived on 2017-08-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170803025604id_/https%3A//whoneedstv.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 		<title>Privacy Policy - WhoNeedsTV.com is all about internet video humor with a twist of irony that offers a collection of funny videos, funny movies, classic TV ads, virals, silly pictures, viral marketing, digital marketing, interactive media, viral seeding &amp; viral deployment.</title><meta name="description" content="Privacy Policy - WhoNeedsTV.com is a hugely popular entertainment website that adds new funny videos, pictures, music, animations, games, galleries, cuties, babes, celebs,links, wtf, fail, and more 365 days a year. Everything viral, social media based &amp; digital.">
@@ -34,29 +34,13 @@
 			<div id="middle" style="background:#FFFFFF;">
 		    <div id="left"> 
 				<div class="columnBorder">
-	<div class="blueHeaderRight">
+	<div class="blueHeaderLeft">
 		<div class="blueTitle">Top referrers</div>
 	</div>
 	<div class="leftContent">
 		<table cellpadding="0" cellspacing="0" style="width: 135px; margin-top:10px;margin-bottom:10px;" align="center">
 <tbody><tr>
-<td valign="top"><a href="http://www.punchbaby.com" target="_blank" class="referrerEmphasize"><b>punchbaby.com</b></a></td>
-<td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
-</tr>
-<tr>
-<td valign="top"><a href="http://www.abum.com" target="_blank" class="referrerEmphasize"><b>abum.com</b></a></td>
-<td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
-</tr>
-<tr>
 <td valign="top"><a href="http://www.machovideo.com" target="_blank" class="referrerEmphasize"><b>machovideo.com</b></a></td>
-<td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
-</tr>
-<tr>
-<td valign="top"><a href="http://www.onehumor.com" target="_blank" class="referrerEmphasize"><b>onehumor.com</b></a></td>
-<td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
-</tr>
-<tr>
-<td valign="top"><a href="http://www.boredtown.com" target="_blank" class="referrerEmphasize"><b>boredtown.com</b></a></td>
 <td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
 </tr>
 <tr>
@@ -64,15 +48,15 @@
 <td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
 </tr>
 <tr>
-<td valign="top"><a href="http://www.pugorama.com" target="_blank" class="referrerEmphasize"><b>pugorama.com</b></a></td>
+<td valign="top"><a href="http://www.boredtown.com" target="_blank" class="referrerEmphasize"><b>boredtown.com</b></a></td>
 <td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
 </tr>
 <tr>
-<td valign="top"><a href="http://www.f-covers.com" target="_blank" class="referrer"><b>f-covers.com</b></a></td>
+<td valign="top"><a href="http://www.livedump.com" target="_blank" class="referrerEmphasize"><b>livedump.com</b></a></td>
 <td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
 </tr>
 <tr>
-<td valign="top"><a href="http://www.reddit.com" target="_blank" class="referrer"><b>reddit.com</b></a></td>
+<td valign="top"><a href="http://www.punchbaby.com" target="_blank" class="referrerEmphasize"><b>punchbaby.com</b></a></td>
 <td valign="bottom" align="right" style="color:#3399cc; width: 30px; font-size: 9px;">&nbsp;</td>
 </tr>
 <tr style="height: 10px;"><td colspan="2"></td></tr>
@@ -102,7 +86,7 @@
 		   if (document.context) document.write ("&context=" + escape(document.context));
 		   if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
 		   document.write ("'><\/scr"+"ipt>");
-		//]]>--></script><script type="text/javascript" src="https://d1.openx.org/ajs.php?zoneid=117864&amp;target=_blank&amp;cb=588746357&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20150324064537id_/https%253A//whoneedstv.com/privacy.php"></script><noscript><a href='http://d1.openx.org/ck.php?n=a802bafa&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://d1.openx.org/avw.php?zoneid=117864&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a802bafa' border='0' alt='' /></a></noscript>
+		//]]>--></script><script type="text/javascript" src="https://d1.openx.org/ajs.php?zoneid=117864&amp;target=_blank&amp;cb=1078338348&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20170803025604id_/https%253A//whoneedstv.com/privacy.php"></script><noscript><a href='http://d1.openx.org/ck.php?n=a802bafa&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://d1.openx.org/avw.php?zoneid=117864&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a802bafa' border='0' alt='' /></a></noscript>
 
 	</div>
 </div>
@@ -110,7 +94,7 @@
 	
 	
 <div class="columnBorder">
-	<div class="blueHeaderRight">
+	<div class="blueHeaderLeft">
 		<div class="blueTitle">Our Friends</div>
 	</div>
 	<div class="leftContent">
